# wearable-anomaly-detection-platform

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md  THREAT_MODEL.md
src/: app.py  main.py
